Travis: check compiler warning conditionally, only on base-compile and arm ports

--- a/regression-tests/01-compile-base/Makefile
+++ b/regression-tests/01-compile-base/Makefile
@@ -1,6 +1,8 @@
 EXAMPLESDIR=../../examples
 TOOLSDIR=../../tools
 
+CHECK_WARNINGS = 1
+
 EXAMPLES = \
 hello-world/avr-raven \
 hello-world/exp5438 \
